# minna-core

./: .env.example  .gitignore  BLUEPRINT_v22_GRAVITY_WELL.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN_v22.md  LICENSE  README.md  mcp.json  pyproject.toml  start_minna.sh
.archive/pro-features/Views/: BriefingView.swift
docs/: ARCHITECTURE_DECISION_SOCKETS.md  CLI_DESIGN_PRINCIPLES.md  DEVELOPMENT_SETUP.md  MINNA_DESKTOP_EXTRACTION.md  STRATEGY_AUDIT.md  V1_AUTH_STRATEGY.md
engine/: Cargo.toml  LICENSE  README.md  providers.example.toml
engine/crates/minna-auth-bridge/: Cargo.toml
engine/crates/minna-auth-bridge/src/: lib.rs
engine/crates/minna-cli/: Cargo.toml
engine/crates/minna-cli/src/: admin_client.rs  main.rs  paths.rs
engine/crates/minna-cli/src/commands/: add.rs  checkpoint.rs  daemon.rs  link.rs  mcp.rs  mod.rs  remove.rs  setup.rs  status.rs  sync.rs
engine/crates/minna-cli/src/sources/: mod.rs
engine/crates/minna-cli/src/tui/: add.rs  mcp.rs  mod.rs  setup.rs  status.rs  theme.rs  welcome.rs
engine/crates/minna-cli/src/ui/: mod.rs
engine/crates/minna-core/: Cargo.toml
engine/crates/minna-core/src/: lib.rs  progress.rs  scheduler.rs
engine/crates/minna-core/src/providers/: atlassian.rs  config.rs  github.rs  google.rs  linear.rs  mod.rs  notion.rs  slack.rs
engine/crates/minna-core/src/tools/: checkpoint.rs  mod.rs
engine/crates/minna-graph/: Cargo.toml
engine/crates/minna-graph/src/: identity.rs  lib.rs  ring_engine.rs  schema.rs  storage.rs
engine/crates/minna-graph/src/extractors/: local_git.rs  mod.rs
engine/crates/minna-ingest/: Cargo.toml
engine/crates/minna-ingest/src/: lib.rs
engine/crates/minna-mcp/: Cargo.toml
engine/crates/minna-mcp/src/: lib.rs
engine/crates/minna-server/: Cargo.toml
engine/crates/minna-server/src/: main.rs
engine/crates/minna-vector/: Cargo.toml
engine/crates/minna-vector/src/: lib.rs
src/minna/: cli.py  main.py  mcp_server.py  search.py
src/minna/core/: schema.sql  vector_db.py
src/minna/ingestion/: base.py  github.py  google.py  importers.py  slack.py
src/minna/utils/: paths.py
src/minna/workers/: __init__.py  github_worker.py  google_worker.py  slack_worker.py
src/minna_ep1/: Info.plist  KeychainHelper.swift  MinnaEP1.entitlements  MinnaEP1App.swift  MinnaEngineManager.swift  README.md  project.yml
src/minna_ep1/Models/: BriefingModels.swift
src/minna_ep1/Services/: BriefingExporter.swift  LocalOAuthManager.swift  MCPClient.swift  MockSignalEngine.swift  RealSignalEngine.swift  SignalProvider.swift  SignalProviderWrapper.swift
src/minna_ep1/Theme/: CityPopTheme.swift
src/minna_ep1/Views/: ConnectorSettingsSheet.swift  ControlCenterView.swift  FirstSyncSheet.swift  GitHubConfigSheet.swift  MCPSetupWizard.swift  MCPSourcesView.swift  ProviderConfigSheet.swift  SlackConfigSheet.swift  TEModifiers.swift  TEProviderRow.swift
tests/: test_crawler_resilience.py  test_filtering.py  test_importers.py  test_parser_and_filter.py  test_vector_logic.py
