[package]
name = "minna-auth-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
oauth2 = { workspace = true }
tokio = { workspace = true }
keyring = { workspace = true }
