[package]
name = "minna-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "CLI for Minna - your AI's memory"

[[bin]]
name = "minna"
path = "src/main.rs"

[dependencies]
minna-auth-bridge = { path = "../minna-auth-bridge" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
chrono.workspace = true
clap.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
console.workspace = true
open.workspace = true
tiny_http.workspace = true
directories.workspace = true
dirs = "5"
ratatui.workspace = true
crossterm.workspace = true
