[package]
name = "minna-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
minna-ingest = { path = "../minna-ingest" }
minna-vector = { path = "../minna-vector" }
minna-auth-bridge = { path = "../minna-auth-bridge" }
regex = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
