[package]
name = "minna-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
minna-ingest = { path = "../minna-ingest" }
minna-vector = { path = "../minna-vector" }
minna-auth-bridge = { path = "../minna-auth-bridge" }
minna-graph = { path = "../minna-graph" }
