[package]
name = "minna-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Minna MCP server binary"

[[bin]]
name = "minna-core"
path = "src/main.rs"

[dependencies]
minna-core = { path = "../minna-core" }
minna-mcp = { path = "../minna-mcp" }
minna-vector = { path = "../minna-vector" }
minna-ingest = { path = "../minna-ingest" }
minna-auth-bridge = { path = "../minna-auth-bridge" }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
