[package]
name = "minna-vector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
fastembed = { workspace = true }
sqlite-vec = { workspace = true }
libsqlite3-sys = { workspace = true }
